// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot for resistance: undefined 1`] = `
<div
  class="ESeries"
>
  <table
    class="table table-sm table-striped table-hover"
  >
    <thead>
      <tr>
        <th>
          E-Series
        </th>
        <th>
          Tolerances [%]
        </th>
        <th>
          Less
        </th>
        <th>
          Equal
        </th>
        <th>
          Greater
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          E48
        </td>
        <td>
          <span>
            2
          </span>
          
        </td>
        <td>
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            9.09
          </button>
        </td>
        <td>
          —
        </td>
        <td>
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            9.53
          </button>
        </td>
      </tr>
      <tr>
        <td>
          E96
        </td>
        <td>
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            1
          </button>
          
        </td>
        <td>
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            9.09
          </button>
        </td>
        <td>
          <span>
            9.31
          </span>
        </td>
        <td>
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            9.53
          </button>
        </td>
      </tr>
      <tr>
        <td>
          E192
        </td>
        <td>
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            .5
          </button>
          , 
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            .25
          </button>
          , 
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            .1
          </button>
          , 
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            .05
          </button>
          
        </td>
        <td>
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            9.2
          </button>
        </td>
        <td>
          <span>
            9.31
          </span>
        </td>
        <td>
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            9.42
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`matches snapshot for resistance: undefined 2`] = `
<div
  class="ESeries"
>
  <table
    class="table table-sm table-striped table-hover"
  >
    <thead>
      <tr>
        <th>
          E-Series
        </th>
        <th>
          Tolerances [%]
        </th>
        <th>
          Less
        </th>
        <th>
          Equal
        </th>
        <th>
          Greater
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          E12
        </td>
        <td>
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            10
          </button>
          
        </td>
        <td>
          —
        </td>
        <td>
          <span>
            1
          </span>
        </td>
        <td>
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            1.2
          </button>
        </td>
      </tr>
      <tr>
        <td>
          E24
        </td>
        <td>
          <span>
            5
          </span>
          
        </td>
        <td>
          —
        </td>
        <td>
          <span>
            1
          </span>
        </td>
        <td>
          <button
            class="btn btn-link"
            style="padding: 0px;"
            type="button"
          >
            1.1
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
